<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="model"
            type="cc.onion.cosyfans.passport.GoogleLoginViewModel" />
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">





    <RelativeLayout
        android:id="@+id/layout_titile"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_bar_height">

        <ImageView
            android:id="@+id/img_return"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@mipmap/icon_left" />


        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/base_font_size_16"
            android:textColor="@color/text"
            android:text="@string/passport_google_login"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">




        <LinearLayout
            android:paddingLeft="@dimen/base_padding"
            android:paddingRight="@dimen/base_padding"
            style="@style/PassportRowStyle">

            <TextView
                android:layout_width="wrap_content"
                style="@style/PassportEditStyle"
                android:textColor="@color/text"
                android:text="@string/passport_invitation_code"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"/>

            <View
                android:background="#979797"
                android:layout_width="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="wrap_content"
                style="@style/PassportEditStyle"
                android:textColor="@color/text"
                android:text="@={model.invitationCode}"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <com.deadline.statebutton.StateButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="76dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:enabled="true"
            android:gravity="center"
            android:onClick="@{v->model.authorizationYes()}"
            android:text="@string/passport_authorization_yes"
            android:textSize="@dimen/base_font_size_15"
            app:normalBackgroundColor="#8C46FF"
            app:normalTextColor="@color/white"
            app:pressedBackgroundColor="#8C46FF"
            app:pressedTextColor="@color/white"
            app:radius="100dp"
            app:unableBackgroundColor="#5064FF"
            app:unableTextColor="@color/white" />

        <com.deadline.statebutton.StateButton
            android:id="@+id/btn_sign"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:enabled="true"
            android:gravity="center"
            android:onClick="@{v->model.authorizationNo()}"
            android:text="@string/passport_authorization_no"
            android:textSize="@dimen/base_font_size_15"
            app:normalBackgroundColor="#F1F2F4"
            app:normalTextColor="@color/text_sub_dark"
            app:pressedBackgroundColor="#F1F2F4"
            app:pressedTextColor="@color/text_sub_dark"
            app:radius="100dp"
            app:unableBackgroundColor="#F1F2F4"
            app:unableTextColor="@color/text_sub_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />


        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/layout_flexbox"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:flexWrap="wrap">


            <TextView
                android:onClick="@{v->model.checkAgreen()}"
                android:id="@+id/tv_check_agreen"
                android:drawablePadding="10dp"
                android:drawableLeft="@mipmap/icon_check_agreen"
                style="@style/PassportNoticeText"
                android:text="@string/passport_me_agree" />

            <TextView
                android:id="@+id/tv_user_protocol"
                style="@style/PassportNoticeText"
                android:onClick="@{v->model.seeUserProtocol()}"
                android:text="@string/passport_user_agreement"
                />
        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</LinearLayout>
</layout>