<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    <variable
        name="model"
        type="cc.onion.cosyfans.passport.ModifyViewModel" />

        <import type="android.view.View"/>
</data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_height="match_parent">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_bar_height">

            <ImageView
                android:id="@+id/img_return"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:src="@mipmap/icon_left" />


            <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/base_font_size_16"
                android:textColor="@color/text"
                android:text="@string/passport_reset_password"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"/>


        </RelativeLayout>



        <LinearLayout
            android:paddingRight="@dimen/base_padding"
            android:paddingLeft="@dimen/base_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_password"
                style="@style/PassportEditStyle"
                android:layout_weight="1"
                android:hint="@string/passport_password"
                android:inputType="phone"
                android:text="@={model.password}" />

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:onClick="@{v->model.checkSeeState1()}"
                android:visibility="@{model.showPasswordSee1?View.VISIBLE:View.GONE}">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/icon_see" />
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:paddingRight="@dimen/base_padding"
            android:paddingLeft="@dimen/base_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_password_again"
                style="@style/PassportEditStyle"
                android:layout_weight="1"
                android:hint="@string/passport_password_quick"
                android:inputType="phone"
                android:text="@={model.passwordAgain}" />

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:onClick="@{v->model.checkSeeState2()}"
                android:visibility="@{model.showPasswordSee2?View.VISIBLE:View.GONE}">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/icon_see" />
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <FrameLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="left|center_vertical"
                android:gravity="left"
                style="@style/PassportBuleText"
                android:text="@string/passport_password_tips"
                />
        </FrameLayout>




        <com.deadline.statebutton.StateButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="76dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:enabled="true"
            android:gravity="center"
            android:onClick="@{v->model.submit()}"
            android:text="@string/passport_reset"
            android:textSize="@dimen/base_font_size_15"
            app:normalBackgroundColor="#8C46FF"
            app:normalTextColor="@color/white"
            app:pressedBackgroundColor="#8C46FF"
            app:pressedTextColor="@color/white"
            app:radius="100dp"
            app:unableBackgroundColor="#5064FF"
            app:unableTextColor="@color/white" />
    </LinearLayout>


</layout>
